# mdbook-replace

./: Cargo.toml
.github/workflows/: rust.yml
src/: main.rs
